tests/negative/test_fnc_arg_ptr_cn_modif.orb
fnc foo(x:(i32 *)) () {
    = (* x) 0;
};

fnc main() () {
    let (x:(i32 cn) 100);
    foo (& x);
};